customized toast, cards

--- a/app/views/examples/components/toast/code/_destructive.erb
+++ b/app/views/examples/components/toast/code/_destructive.erb
@@ -3,4 +3,5 @@
       description: "Could not find email password combination.",
       variant: :destructive,
       auto: false,
+      position: :top,
       class: "hidden" %>
