--- a/app/views/examples/components/toast/code/_preview.erb
+++ b/app/views/examples/components/toast/code/_preview.erb
@@ -1,4 +1,5 @@
 <%= render_toast header: "Scheduled: Catch up",
   description: "Friday, February 10, 2023 at 5:57 PM",
   action: render_button("Undo", variant: :outline),
+  position: :top,
   id: "default_toast" %>
